--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <section class="taskArea">
     <div class="taskTaps">
       <div id="underLine"></div>
-    <div>all</div>
-    <div>processing</div>
-    <div>done</div>
+    <div id="all">all</div>
+    <div id="ongoing">processing</div>
+    <div id="done">done</div>
   </div>
 
   <div id="taskBoard">
